--- a/plugin.yml
+++ b/plugin.yml
@@ -4,5 +4,5 @@ api: 3.9.1
 version: 1.0
 main: DragoVN\Main
 author: ["DragoVN"]
-description: Plugin by DragoVN no copyright@!
+description: Plugin CustomRandomOre Free!
     
